# daemoneye

./: .gitignore  AGENT_INTRO_EXAMPLE.md  AI_ASSISTANT_IMPROVEMENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GHOST_SESSION_FIX_PLAN.md  KNOWLEDGE_SYSTEM_DESIGN.md  KNOWLEDGE_SYSTEM_IMPL_PLAN.md  PRIORITIES.md  PRODUCT_DEFINITION.md  PTY_EXECUTOR_PLAN.md  README.md  REFACTOR_BACKLOG.md  REQUIREMENTS.md  REVIEW.md  SIGNAL_GATEWAY_CONCEPT.md  TMUX_ROADMAP.md  UI_ROADMAP.md  UNUSED_ASSETS.md  agent_memory_proposal.md  agent_runbook_loop.jsonl  ascii-logo.md  cleanup_server.py  daemoneye.service  ghost-sessions-design.md  patch_server.py  sre.toml  t1000.service  test_color.rs  test_iter.rs  test_markup.rs  test_menu.rs  test_time.rs  webhook-alerting-in-daemoneye.md
.github/workflows/: ci.yml  rust.yml
assets/: runbook-ghost-template.md
assets/etc/: config.toml
assets/memory/: ghost-shell-guide.md  runbook-format.md  runbook-ghost-template.md  scripts-and-sudoers.md  webhook-setup.md
assets/memory/knowledge/: ghost-shell-guide.md  runbook-format.md  runbook-ghost-template.md  scheduling-guide.md  scripts-and-sudoers.md
assets/memory/session/: pane-referencing-convention.md  unicode-decoration-pref.md
assets/prompts/: ghost-shell.txt  sre.toml
docs/: ARCHITECTURE.md  PRODUCT_DEFINITION.md  REQUIREMENTS.md
src/: client.rs  config.rs  daemon.rs  header.rs  ipc.rs  ipc_tests.rs  log.rs  main.rs  manifest.rs  manifest_tests.rs  memory.rs  memory_tests.rs  pane_prefs.rs  runbook.rs  scheduler.rs  scripts.rs  search.rs  session_store.rs  session_store_tests.rs  sys_context.rs  terminal.rs  util.rs  webhook.rs
src/ai/: client.rs  filter.rs  mod.rs  tools.rs  types.rs
src/ai/backends/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/cli/: commands.rs  diff.rs  input.rs  local_cmds.rs  mod.rs  notify.rs  render.rs  status.rs  tests.rs
src/cli/commands/: approval.rs  approval_ui.rs  ask.rs  ipc_client.rs  lifecycle.rs  mod.rs  pane.rs  setup.rs  stream.rs
src/daemon/: background.rs  digest.rs  executor.rs  ghost.rs  mod.rs  policy.rs  policy_tests.rs  scheduled.rs  server.rs  session.rs  stats.rs  utils.rs
src/daemon/executor/: file_ops.rs  foreground.rs  knowledge.rs  mod.rs  schedule.rs
src/pty_exec/: mod.rs  prompt.rs
src/tmux/: ansi.rs  cache.rs  cache_tests.rs  mod.rs  pane.rs  session.rs  window.rs
