[package]
name = "t1000"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
gtk4 = "0.11.0"
nix = "0.31.1"
portable-pty = "0.9.0"
async-trait = "0.1"
futures-util = "0.3"
regex = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
vte = "0.15.0"
