[package]
name = "daemoneye"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
futures-util = "0.3"
libc = "0.2"
log = "0.4"
nix = "0.31.1"
regex = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "signal", "time", "process"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
