[package]
name = "daemoneye"
version = "0.9.1"
edition = "2024"
description = "An AI-powered terminal assistant that embeds into tmux — streams responses, runs commands, watches panes, and operates autonomously via ghost shells"
license = "MIT"
authors = ["Matt Ryanczak <matt@ryanczak.org>"]
repository = "https://github.com/ryanczak/daemoneye"
keywords = ["tmux", "ai", "automation", "assistant", "sre"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
futures-util = "0.3"
libc = "0.2"
log = "0.4"
nix = "0.31.1"
regex = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "signal", "time", "process"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
